--- a/_sass/_diagonal_elements.scss
+++ b/_sass/_diagonal_elements.scss
@@ -38,7 +38,7 @@
 .brand-color-background {
 	background: $brand-color;
 
-	h1, h2, h3, h4, h5, h6, p, ul, a {
+	h1, h2, h3, h4, h5, h6, p, ul, a, span {
 		color: white;
 	}
 }
