--- a/_includes/schedule.html
+++ b/_includes/schedule.html
@@ -27,17 +27,17 @@
 		{% if loopindex == 0 %}
 		<div class="uk-active" aria-hidden="false">
 			{% else %}
-			<div aria-hidden="true" class="">
+			<div aria-hidden="true" class="uk-grid">
 				{% endif %}
 				{% for block in day.blocks %}
-				<div class="uk-text-center brand-color-background"><span>{{ block.title }}</span></div>
-				{% for track in block.tracks %}
-				<div class="schedule-track">
-					{% for item in track.items %}
-					{% include schedule-item.html item=item context=include.context %}
+				<div class="uk-text-center brand-color-background uk-width-1-1"><span>{{ block.title }}</span></div>
+					{% for track in block.tracks %}
+					<div class="schedule-track uk-width-1-{{  block.tracks.size }}@m">
+						{% for item in track.items %}
+							{% include schedule-item.html item=item context=include.context %}
+						{% endfor %}
+					</div>
 					{% endfor %}
-				</div>
-				{% endfor %}
 				{% endfor %}
 			</div>
 			{% endfor %}
