--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -142,3 +142,17 @@ span {
 	width: 100%;
 	height: 640px;
 }
+
+// schedule adjustments
+.uk-tab::before {
+    border-color: $brand-color;
+}
+
+.uk-tab li a {
+    color: $brand-color !important;
+}
+
+.uk-tab li.uk-active a {
+    color: #ffffff !important;
+}
+
