home header shows white logo

--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -156,3 +156,13 @@ span {
     color: #ffffff !important;
 }
 
+
+// ti.to widget adjustments
+
+.tito-ticket-name {
+	color: $brand-color;
+}
+
+.tito-submit {
+	background-color: $brand-color !important;
+}
