--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -85,7 +85,7 @@ form {
 	line-height: 26px;
 }
 
-.sponsor-logo {
+.supporter-logo {
 	background-size: contain;
 	background-position: center center;
 	background-repeat: no-repeat;
