--- a/_sass/_button.scss
+++ b/_sass/_button.scss
@@ -9,6 +9,7 @@ button, li a.btn, a.btn {
 	color: #fff;
 	text-decoration: none;
 	font-weight: 600;
+	font-size: 14px;
 
 	&:hover, &:focus {
 		cursor: pointer;
