improve the schedule styling after designer feedback

--- a/_includes/schedule-item.html
+++ b/_includes/schedule-item.html
@@ -4,7 +4,7 @@
 {% endif %}
 
 <div class="uk-grid">
-    <div class="">
+    <div class="uk-width-1-6 uk-text-right">
         <p class="">{{ item.time }}</p>
     </div>
     <div class="uk-width-5-6">
