--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,12 +20,16 @@
           <li>
             <a class="page-link" href="{{ '/blog' | prepend: site.baseurl }}">Blog</a>
           </li>
-          <!-- <li>
-                <a class="page-link" href="http://cfp.uikonf.com" target="_blank">Call for Proposals</a>
-              </li> -->
+          {% if site.cfp_enabled %}
           <li>
-            <a class="page-link btn" href="{{ site.ticket_url }}" target="_blank">Tickets</a>
+            <a class="page-link" href="{{ site.cfp_url }}" target="_blank">Call for Proposals</a>
           </li>
+          {% endif %}
+          {% if site.tickets_enabled %}
+            <li>
+              <a class="page-link btn" href="{{ site.ticket_url }}" target="_blank">Tickets</a>
+            </li>
+          {% endif %}
         </ul>
 
         <ul class="uk-navbar-nav uk-hidden@m uk-navbar-right">
@@ -54,12 +58,16 @@
             <li>
               <a class="page-link" href="{{ '/blog' | prepend: site.baseurl }}">Blog</a>
             </li>
-            <!-- <li>
-                <a class="page-link" href="http://cfp.uikonf.com" target="_blank">Call for Proposals</a>
-              </li> -->
+            {% if site.cfp_enabled %}
+            <li>
+               <a class="page-link" href="{{ site.cfp_url }}" target="_blank">Call for Proposals</a>
+            </li>
+            {% endif %}
+            {% if site.tickets_enabled %}
             <li>
               <a class="page-link btn" href="{{ site.ticket_url }}" target="_blank">Tickets</a>
             </li>
+            {% endif %}
           </ul>
         </div>
       </div>
