tickets button on mobile

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -32,12 +32,21 @@
 				border-color: $brand-color;
 				color: #fff;
 			}
+
 		}
 		
 	}
 
 	.uk-navbar-brand {
 		line-height: 84px;
+	}
+
+	// ticket button on the mobile
+	#mobile-navigation .btn {
+		border-color: #fff;
+		display: inline-block;
+		padding: 12px 24px;
+		margin-top: 20px;
 	}
 }
 
