--- a/_layouts/landing-page.html
+++ b/_layouts/landing-page.html
@@ -22,7 +22,7 @@ layout: default
 
 {% when "introduction" %}
 
-<div class="uk-margin-top uk-margin-bottom" id="{{ section.id}}">
+<div class="uk-margin-medium-top uk-margin-bottom" id="{{ section.id}}">
     <div class="uk-container">
         <div class="uk-column-1-2@m">
             {{ section.text | markdownify }}
@@ -31,17 +31,18 @@ layout: default
 </div>
 
 {% when "tickets" %}
-
+{% if site.tickets_enabled %}
 <div class="uk-section" id="{{ section.id}}">
     <div class="uk-container">
         <h2 class="uk-text-center">{{ section.headline }}</h2>
-        <div>
+        <div class="uk-margin-medium-bottom">
             <script>TitoDevelopmentMode = true</script>
             <tito-widget event="ultimateconf/2013"></tito-widget>
         </div>
         {{ section.text | markdownify }}
     </div>
 </div>
+{% endif %}
 
 {% when "schedule" %}
 
