fix layout, update tax stuff

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,7 +12,7 @@ defaultHeaderDescription: UIKonf is an independent conference for serious iOS de
 {% include header-image.html image=headerImage title=headerTitle description=headerDescription %}
 
 
-<div class="uk-container">
+<div class="uk-container" style="margin-bottom:50px;">
 	<div class="uk-grid">
 		<div class="uk-width-8-10@m">
 			{{ content }}
