link image only if link exists

--- a/_includes/thumbnail.html
+++ b/_includes/thumbnail.html
@@ -1,8 +1,14 @@
 <figure class="uk-transition-toggle">
     <div class="uk-border-circle uk-inline-clip">
-        <a href="{{ include.link }}">
-            <div class="uk-transition-scale-up person-photo"
+            {% capture image %}
+                <div class="uk-transition-scale-up person-photo"
                 style="background-image: url('/static/images/{{ include.image }}')" aria-label="{{ include.alt }}"></div>
-        </a>
+            {% endcapture image %}
+            
+            {% if include.link %}
+                <a href="{{ include.link }}">{{image}}</a>
+            {% else %}
+                {{image}}
+            {% endif %}
     </div>
 </figure>
