--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -27,7 +27,7 @@
           <div class="response" id="mce-success-response" style="display:none"></div>
         </div>
         <p class="uk-text-center">Get in touch at <a href="https://twitter.com/uikonf">@uikonf</a> or <a
-            href="mail:questions@uikonf.com">questions@uikonf.com</a></p>
+            href="mailto:questions@uikonf.com">questions@uikonf.com</a></p>
         <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
             name="b_08d7d9a7a55f501920eb76453_d3f17105cf" tabindex="-1" value=""></div>
