--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,10 +7,10 @@
               <img src="{{ site.baseurl }}/static/images/uikonf-logo-white.svg" height="50" width="50" alt="UIKonf logo">
             </div>
           	<ul class="uk-list">
-              <li><a href="{{ site.baseurl }}/terms/">Terms &amp; Conditions</a></li>
+              <li><a href="{{ site.baseurl }}/terms">Terms &amp; Conditions</a></li>
               <li><a href="{{ site.baseurl }}/imprint">Imprint</a></li>
               <li><a href="{{ site.baseurl }}/privacy-policy">Privacy Policy</a></li>
-              <li><a href="{{ site.baseurl }}/coc/">Code of Conduct</a></li>
+              <li><a href="{{ site.baseurl }}/coc">Code of Conduct</a></li>
             </ul> 
         </div>
         <div class="uk-width-1-1@s uk-width-1-3@m uk-margin-large-bottom">
