remove unnecessary class blocking the content

--- a/_includes/header-image.html
+++ b/_includes/header-image.html
@@ -3,7 +3,7 @@
 {% endcapture %}
 <div class="headerimage small uk-margin-bottom" style="background-image: url({{ url }});" uk-parallax="by: -50">
   <img class="uk-invisible" src="{{ site.baseurl }}/static/images/{{ include.image }}" alt="home image"/>
-  <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-flex-column">
+  <div class="uk-flex uk-flex-center uk-flex-middle uk-flex-column">
     <div class="uk-container teaser">
       <h1>{{ include.title }}</h1>
       {% if include.description %}
