--- a/_layouts/landing-page.html
+++ b/_layouts/landing-page.html
@@ -70,6 +70,8 @@ layout: default
                 {% endfor %}
             </div>
         </div>
+        {% when "cfp" %}
+        {{ section.text | markdownify }}
     </div>
 </div>
 
