--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,11 +6,11 @@ layout: page
 
   <header class="post-header">
    <article class="author-post uk-comment">
-	    <header class="uk-comment-header">
+	    <header class="uk-text-center">
 			{% if page.author %}
 			{% assign author = site.authors[page.author] %}
 			{% include thumbnail.html link=author.twitter image=author.thumbImg alt=author.name %}
-        	<img class="uk-comment-avatar" src="{{ site.baseurl }}/static/images/{{ site.authors[page.author].thumbImg }}" alt="{{ site.authors[page.author].name }}">
+        	<!-- <img class="uk-comment-avatar" src="{{ site.baseurl }}/static/images/{{ site.authors[page.author].thumbImg }}" alt="{{ site.authors[page.author].name }}"> -->
 	        <h4 class="uk-comment-title" itemprop="author" itemscope itemtype="http://schema.org/Person"><a href="{{ site.authors[page.author].twitter }}"><span itemprop="name">{{ site.authors[page.author].name }}</span></a></h4>
 	        {% endif %}
 	        <time datetime="{{ page.date | date_to_xmlschema }}" class="uk-comment-meta" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>
