--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -1,4 +1,4 @@
-<div class="uk-section" id="newsletter">
+<div class="uk-section" id="newsletter"><div class="uk-container">
   <!-- Begin MailChimp Signup Form -->
   <div id="mc_embed_signup">
     <h2 class="uk-text-center">Stay updated - Join our newsletter</h2>
@@ -36,4 +36,4 @@
   </div>
 
   <!--End mc_embed_signup-->
-</div>
+</div></div>
