--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,9 @@
           {% endif %}
           {% endfor %}
           <li>
+            <a class="page-link" href="https://shop.spreadshirt.de/uikonf/" target="_blank">Swag Shop</a>
+          </li>
+          <li>
             <a class="page-link" href="{{ '/blog' | prepend: site.baseurl }}">Blog</a>
           </li>
           {% if site.cfp_enabled %}
@@ -55,6 +58,9 @@
             </li>
             {% endif %}
             {% endfor %}
+            <li>
+              <a class="page-link" href="https://shop.spreadshirt.de/uikonf/" target="_blank">Swag Shop</a>
+            </li>
             <li>
               <a class="page-link" href="{{ '/blog' | prepend: site.baseurl }}">Blog</a>
             </li>
