--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -89,9 +89,28 @@ form {
 	background-size: contain;
 	background-position: center center;
 	background-repeat: no-repeat;
-	height: 96px;
 	width: 80%;
 	margin: auto;
+}
+
+.platinum {
+	height: 180px;
+}
+
+.diamond {
+	height: 160px;
+}
+
+.gold {
+	height: 140px;
+}
+
+.silver {
+	height: 120px;
+}
+
+.bronze {
+	height: 100px;
 }
 
 .archive-list {
