--- a/_layouts/landing-page.html
+++ b/_layouts/landing-page.html
@@ -49,7 +49,7 @@ layout: default
 <div class="uk-section" id="{{ section.id}}">
     <div class="uk-container">
         <h2 class="uk-text-center">{{ section.headline }}</h2>
-        {% include schedule.html context="home" %}
+        {% include schedule.html context="schedule" %}
     </div>
 </div>
 
