--- a/_layouts/landing-page.html
+++ b/_layouts/landing-page.html
@@ -120,7 +120,7 @@ layout: default
         {% endif %}
 
         {% assign goldSponsors = activeSponsors | where:"level","gold" %} {% if goldSponsors.size > 0 %}
-        <h3 class="uk-text-center">Gold</h3>
+        <h3 class="uk-text-center" style="margin-bottom: 50px!important;">Gold</h3>
         <div class="uk-text-center uk-grid uk-flex-between uk-child-width-1-2@m uk-margin-large-bottom" uk-grid>
             {% for sponsor in goldSponsors %}
             <div class="">
@@ -131,7 +131,7 @@ layout: default
         {% endif %}
 
         {% assign silverSponsors = activeSponsors | where:"level","silver" %} {% if silverSponsors.size > 0 %}
-        <h3 class="uk-text-center">Silver</h3>
+        <h3 class="uk-text-center" style="margin-bottom: 50px!important;">Silver</h3>
         <div class="uk-text-center uk-grid uk-flex-between uk-child-width-1-3@m uk-margin-large-bottom" uk-grid>
             {% for sponsor in silverSponsors %}
             <div class="">
@@ -142,8 +142,8 @@ layout: default
         {% endif %}
 
         {% assign bronzeSponsors = activeSponsors | where:"level","bronze" %} {% if bronzeSponsors.size > 0 %}
-        <h3 class="uk-text-center">Bronze & Community</h3>
-        <div class="uk-text-center uk-grid uk-flex-between uk-child-width-1-5@m uk-margin-large-bottom" uk-grid>
+        <h3 class="uk-text-center" style="margin-bottom: 30px!important;">Bronze & Community</h3>
+        <div class="uk-text-center uk-grid uk-flex-center uk-child-width-1-5@m uk-margin-large-bottom" uk-grid>
             {% for sponsor in bronzeSponsors %}
             <div class="">
                 {% include sponsor.html content=sponsor.content image=sponsor.image anchor=sponsor.anchor image-alt=sponsor.image-alt level=sponsor.level%}
