update sponsors and css

--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -93,19 +93,7 @@ form {
 	margin: auto;
 }
 
-.platinum {
-	height: 140px;
-}
-
-.diamond {
-	height: 140px;
-}
-
-.gold {
-	height: 140px;
-}
-
-.silver {
+.platinum, .diamond, .gold, .silver {
 	height: 120px;
 }
 
