Add Peter, update schedule, update wordings

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -34,7 +34,7 @@
 {% endif %}
 
 {% assign bronzeSponsors = activeSponsors | where:"level","bronze" %} {% if bronzeSponsors.size > 0 %}
-<h3 class="uk-text-center" style="margin-bottom: 30px!important;">Bronze & Community</h3>
+<h3 class="uk-text-center" style="margin-bottom: 30px!important;">Bronze</h3>
 <div class="uk-text-center uk-grid uk-flex-center uk-child-width-1-5@m uk-margin-large-bottom" uk-grid>
     {% for sponsor in bronzeSponsors %}
     <div class="">
